--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script type="text/javascript" src="/js/vue.js"></script>
     <script type="text/javascript" src="/js/vuex.js"></script>
     <script type="text/javascript" src="/js/vue-router.js"></script>
+    <script type="text/javascript" src="/js/echarts.js"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=WKzYrcUXv5YdGBwtAl4Fy5frQq0zuQBQ&s=1"></script>
 </head>
 <body>
     <div id="app"></div>
