--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <script type="text/javascript" src="/js/vue-router.js"></script>
     <script type="text/javascript" src="/js/echarts.js"></script>
     <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=WKzYrcUXv5YdGBwtAl4Fy5frQq0zuQBQ&s=1"></script>
+    <!--[if lt IE 9]>  
+    　　　　<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>  
+    <![endif]--> 
 </head>
 <body>
     <div id="app"></div>
