--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta content="black" name="apple-mobile-web-app-status-bar-style">
     <meta content="telephone=no" name="format-detection">
     <meta name="keywords" content="美正,美正在线,美正广告,美正网络,往返免费wifi,铁路wifi,火车上网,免费上网,微信连wifi">
-    <meta name="description" content="广州美正在线网络科技有限公司由中国最具影响力的中高端户外媒体运营商之一——航美在线集团控股，是中国专业运营高铁列车Wi-Fi、普速列车Wi-Fi媒体的互联网传播机构。美正普速已覆盖国内10大路局，覆盖沿海发达城市90%铁路线路，超过22000节车厢开通了上网服务">
+    <meta name="description" content="广州美正在线网络科技有限公司集资源、技术、传媒为一体，由中国最具影响力的中高端户外媒体运营商之一——航美在线集团控股，是中国专业运营高铁列车Wi-Fi、普速列车Wi-Fi媒体的综合性科技公司。">
     <title>美正在线网络科技有限公司官网</title>
 
     <link href="/images/static/logo2.png" rel="apple-touch-icon-precomposed">
